CRUD working well finally
