# src/router.ts
@@ -1,29 +1,33 @@
 import cors from "cors";
 import * as express from "express";
 
-import { customerApi, ping, versions } from "./api";
+import { apiVersion, customerApi, getVersions, ping } from "./api";
+
+const API_BASE = apiVersion.path;
 
 class Router {
   constructor(server: express.Express) {
     const router = express.Router();
 
-    router.get("/", versions);
+    router.get("/", getVersions);
     router.get("/ping", ping);
 
+    //  TODO: move defs to separate file
+
     //get all customers
-    router.get("/customers", cors(), customerApi.fetchAll);
+    router.get(`${API_BASE}/customers`, cors(), customerApi.fetchAll);
 
     //create new customer
-    router.post("/customers", cors(), customerApi.createOne);
+    router.post(`${API_BASE}/customers`, cors(), customerApi.createOne);
 
     //get customer by id
-    router.get("/customers/:id", cors(), customerApi.getOne);
+    router.get(`${API_BASE}/customers/:id`, cors(), customerApi.fetchOne);
 
     //update customer
-    router.put("/customers/:id", cors(), customerApi.updateOne);
+    router.put(`${API_BASE}/customers/:id`, cors(), customerApi.updateOne);
 
     //delete customer
-    router.delete("/customers/:id", cors(), customerApi.deleteOne);
+    router.delete(`${API_BASE}/customers/:id`, cors(), customerApi.deleteOne);
 
     server.use((req, resp, next) => {
       next();
