# src/swagger.json
@@ -38,13 +38,29 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": { "schema": { "$ref": "#/definitions/schemas/ArrayOfVersions" } }
+              "application/json": { "schema": { "$ref": "#/definitions/ArrayOfVersions" } }
             }
           }
         }
       }
     },
-    "/customers": {
+    "/ping": {
+      "get": {
+        "tags": ["root"],
+        "summary": "Ping for alive",
+        "description": "Returns a list of the available API versions",
+        "operationId": "versions",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/definitions/ServerInfo" } }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/customers": {
       "get": {
         "tags": ["Customers"],
         "summary": "Get all customers in system",
@@ -85,7 +101,7 @@
         }
       }
     },
-    "/customers/{id}": {
+    "/api/v1/customers/{id}": {
       "parameters": [
         {
           "name": "id",
@@ -190,35 +206,33 @@
     }
   },
   "definitions": {
-    "schemas": {
-      "APIVersion": {
-        "type": "object",
-        "properties": {
-          "version": { "type": "integer", "format": "int64" },
-          "path": { "type": "string" }
-        }
-      },
-      "ServerInfo": {
-        "type": "object",
-        "properties": {
-          "name": { "type": "string" },
-          "description": { "type": "string" },
-          "version": { "type": "string" },
-          "uptime": { "type": "number" }
-        }
-      },
-      "ArrayOfVersions": {
-        "type": "array",
-        "items": { "$ref": "#/components/schemas/APIVersion" }
-      }
-    },
-
+    "schemas": {},
     "id": {
       "properties": {
         "uuid": {
           "type": "string"
         }
       }
+    },
+    "APIVersion": {
+      "type": "object",
+      "properties": {
+        "version": { "type": "integer", "format": "int64" },
+        "path": { "type": "string" }
+      }
+    },
+    "ServerInfo": {
+      "type": "object",
+      "properties": {
+        "name": { "type": "string" },
+        "description": { "type": "string" },
+        "version": { "type": "string" },
+        "uptime": { "type": "number" }
+      }
+    },
+    "ArrayOfVersions": {
+      "type": "array",
+      "items": { "$ref": "#/definitions/APIVersion" }
     },
     "Customer": {
       "type": "object",
